syntax = "proto3";

package blog;
option go_package = ".;blogpb";

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

// create
message CreateBlogRequest {
  Blog blog = 1; // with a empty id
}
message CreateBlogResponse {
  Blog blog = 1; // id is filled
}

// get
message GetBlogRequest { string id = 1; }
message GetBlogResponse { Blog blog = 1; }

// update
message UpdateBlogRequest {
  Blog blog = 1; // with a empty id
}
message UpdateBlogResponse {
  Blog blog = 1; // id is filled
}

// delete
message DeleteBlogRequest { string id = 1; }
message DeleteBlogResponse { string id = 1; }

// list
message ListRequest {}
message ListResponse { Blog blog = 1; }

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
  rpc GetBlog(GetBlogRequest) returns (GetBlogResponse) {};
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};
  rpc ListBlog(ListRequest) returns (stream ListResponse) {};
}
